# app/modules/users/api/routes.go
@@ -1,0 +1,11 @@
+package api
+
+import (
+	userHandlers "payment-sandbox/app/modules/users/handlers"
+
+	"github.com/gin-gonic/gin"
+)
+
+func RegisterPublicRoutes(v1 *gin.RouterGroup, handler *userHandlers.UserHandler) {
+	v1.POST("/users/register", handler.RegisterMerchant)
+}
